# unit-wallet-android

./: .gitignore  .gitmodules  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/words/: en-BIP39Words.txt  es-BIP39Words.txt  ja-BIP39Words.txt  zh-BIP39Words.txt
app/src/main/jni/transition/: CashAddr.c  CashAddr.h  JNIBIP32Sequence.c  JNIBIP32Sequence.h  JNIBase58.c  JNIBase58.h  JNIKey.c  JNIKey.h  PeerManager.c  PeerManager.h  core.c  wallet.c  wallet.h
app/src/main/jni/unitwallet-core/: BRAddress.c  BRAddress.h  BRArray.h  BRBIP32Sequence.c  BRBIP32Sequence.h  BRBIP38Key.c  BRBIP38Key.h  BRBIP39Mnemonic.c  BRBIP39Mnemonic.h  BRBIP39WordsEn.h  BRBase58.c  BRBase58.h  BRBloomFilter.c  BRBloomFilter.h  BRCashAddr.c  BRCashAddr.h  BRCrypto.c  BRCrypto.h  BRInt.h  BRKey.c  BRKey.h  BRMerkleBlock.c  BRMerkleBlock.h  BRPaymentProtocol.c  BRPaymentProtocol.h  BRPeer.c  BRPeer.h  BRPeerManager.c  BRPeerManager.h  BRSet.c  BRSet.h  BRTransaction.c  BRTransaction.h  BRWallet.c  BRWallet.h  LICENSE  README.md  module.modulemap  test.c
app/src/main/res/anim/: accelerate_deceleration_interpolator.xml  anticipate_interpolator.xml  check_animation.xml  empty_300.xml  enter_from_bottom.xml  enter_from_left.xml  enter_from_right.xml  enter_from_top.xml  exit_to_bottom.xml  exit_to_left.xml  exit_to_right.xml  exit_to_top.xml  fade_down.xml  fade_in.xml  fade_out.xml  fade_up.xml  flipper_enter.xml  flipper_exit.xml  overshoot_interpolator.xml  shake.xml
app/src/main/res/animator/: from_bottom.xml  from_left.xml  from_top.xml  plain_300.xml  to_bottom.xml  to_right.xml  to_top.xml
app/src/main/res/drawable/: animated_check.xml  arrow_down_bold_circle.xml  arrow_up_bold_circle.xml  b_blue.xml  b_blue_pressed.xml  b_blue_stroke.xml  b_blue_stroke_pressed.xml  b_gray_stroke.xml  b_gray_stroke_pressed.xml  b_half_left_blue.xml  b_half_left_blue_stroke.xml  b_half_left_white.xml  b_half_right_blue.xml  b_half_right_blue_stroke.xml  b_half_right_white.xml  b_pay.xml  border_shape.xml  border_shape_pressed.xml  bread_gradient.xml  bread_toggle.xml  bread_toggle_off.xml  bread_toggle_on.xml  button_reset_pin.xml  circle_indicator.xml  copy_button.xml  finger_gradient.xml  ic_close_black_24dp.xml  ic_error_outline_black_24dp.xml  ic_fingerprint_large.xml  ic_search_black_24dp.xml  ic_search_gray_24dp.xml  import_gradient.xml  keyboard_trans_button.xml  keyboard_white_button.xml  load_wallet_progress.xml  loading_wallet_layout.xml  logo_circle.xml  menu_layout.xml  notification_gradient.xml  paper_key_gradient.xml  (+21 more)
app/src/main/res/drawable-anydpi-v21/: ic_check_mark_blue.xml  ic_check_mark_grey.xml  ic_check_mark_white.xml  ic_delete_gray.xml  ic_delete_white.xml  ic_paper_phrase.xml  ic_pen.xml  ic_pin_dot_black.xml  ic_pin_dot_gray.xml  ic_pin_dot_white.xml
app/src/main/res/drawable-hdpi/: clickable_layout.xml
app/src/main/res/layout/: activity_about.xml  activity_advanced.xml  activity_bread.xml  activity_camera.xml  activity_disabled.xml  activity_display_currency.xml  activity_fingerprint.xml  activity_import.xml  activity_input_words.xml  activity_intro.xml  activity_intro_recover.xml  activity_nodes.xml  activity_notification.xml  activity_paper_key.xml  activity_paper_key_prove.xml  activity_pin.xml  activity_pin_template.xml  activity_qr.xml  activity_restore.xml  activity_security_center.xml  activity_settings.xml  activity_share_data.xml  activity_spend_limit.xml  activity_sync_blockchain.xml  activity_web_view.xml  activity_withdraw_bch.xml  activity_write_down.xml  bread_alert_dialog.xml  bread_spinner_item.xml  currency_list_item.xml  fingerprint_dialog_container.xml  fragment_bread_pin.xml  fragment_manage.xml  fragment_menu.xml  fragment_receive.xml  fragment_send.xml  fragment_signal.xml  fragment_support.xml  fragment_transaction_details.xml  fragment_word_item.xml  (+14 more)
(+171 files in other folders)
